src/index.css
/* Global Elements */
* {
  -webkit-appearance: none;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  font-family: 'Open Sans', sans-serif;
  text-align: center;
}

h1 {
  margin: 30px 0px 0px 0px;
}

body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  height: 80vh;
  overflow: hidden;
  background: #f9fdff;
}


button {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

select {
  text-align-last: center;
}

/* Custom Classes */

.activeWindow {
  display: grid;
  height: 40vh;
  justify-content: center;
  align-content: center;
  grid-row-gap: 20px;
  grid-auto-rows: 1fr;
  padding-top: 40px;
}


.btn {
  font-size: 24px;
  border-radius: 5px;
  background-image: linear-gradient(#eff6ff, #f2f6fc, #e3e9ef);
}

.btn:focus, active  {
 outline:none;
}

.headerIcon {
  font-size: 46px;
  border: none;
  background: none;
  outline: none;
}


.hide {
  visibility: hidden;
}


.main {
  padding-top: 30px;
}

.number {
  font-size: 80px;
}

.start {
  background-image: linear-gradient(#d2f7b7, #c7eaad, #a4c18f);
}

.reset {
  background-image: linear-gradient(#fcbaba, #eaadad, #c18f8f);
}

/* Custom ID's */

#footer {
  position: fixed;
  font-size: 10px;
  bottom: 0;
  width: 100%;
  color:  #8e9396

}
@media only screen and (max-width: 550px) {
  #spinner {
    padding-top: 40%;
  }
  #footer {
    font-size: 8px;
  }
}

